src/objects/Contribution__c.object
<CustomObject>
    <fields>
        <fullName>Advocacy__c</fullName>
        <formula>IF( INCLUDES( Pillars__c , &quot;Advocacy&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advocacy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Meets Expectations</fullName>
                </value>
                <value>
                    <fullName>Exceeds Expectations</fullName>
                </value>
                <value>
                    <fullName>Does Not Meet Expectations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contributions</relationshipLabel>
        <relationshipName>Contributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <formula>IF( INCLUDES( Pillars__c , &quot;Expertise&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expertise</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback</label>
        <referenceTo>Feedback__c</referenceTo>
        <relationshipLabel>Contributions</relationshipLabel>
        <relationshipName>Contributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generosity__c</fullName>
        <formula>IF( INCLUDES( Pillars__c , &quot;Generosity&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generosity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leadership__c</fullName>
        <formula>IF( INCLUDES( Pillars__c , &quot;Leadership&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leadership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pillars__c</fullName>
        <label>Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expertise</fullName>
                </value>
                <value>
                    <fullName>Generosity</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contribution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>